CSS: Fix coloring of HR line breaks in markdown documents.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -2268,6 +2268,11 @@ div.box_code_none {
 	color: var(--theme-color-highlight);
 }
 
+.markdown-body hr {
+	border: 0;
+	border-top: 2px solid var(--border-color);
+}
+
 /* Icon Overrides */
 
 i.mdi.mdi-moon-waning-crescent:before {
